working on the creating category part

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.1.1
   equatable: ^2.0.5
   cached_network_image: ^3.3.1
+  image_picker: ^1.0.7
 
   flutter_iconsax:
     path: packages/flutter_iconsax
