--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "dine_in",
-    "short_name": "dine_in",
+    "name": "dine_in_resturant",
+    "short_name": "dine_in_resturant",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
